test/testdata/classes/methods/init/missing_2_args_error.lox
class Foo {
  init(a, b) {
    print a + b;
  }
}

Foo(); // error: Foo() missing 2 arguments: a and b
